--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   <title>Desafio</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
-  <body>
-
 <!-- MENU-->
 <ul>
   <li class="dropdown">
@@ -34,7 +32,7 @@
   </li>
 </ul>
 <!-- FIN MENU -->
-
+<body class="flex-container">
 <!-- SLIDER -->
 <div class="slider"></div>
 <!-- FIN SLIDER -->
