CSS Grid + @mediaquery + Mobile First
container display:grid
Navigation
Main
Footer

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html> 
 <html>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <head>
   <title>Desafio</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
-<!-- MENU-->
+
+
+<div class="container">
+ <div class="box-1">
+   <!-- MENU-->
 <ul>
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Descubre</a>
@@ -32,15 +37,11 @@
   </li>
 </ul>
 <!-- FIN MENU -->
-<body class="flex-container">
-<!-- SLIDER -->
-<div class="slider"></div>
-<!-- FIN SLIDER -->
-
-<!-- BIOGRAFIA -->
-
+ </div>
+ <div class="box-3">
+ <div class="slider"></div>
+   <!-- BIOGRAFIA -->
 <h1>Jeff Buckley Biography</h1>
-<div class="content">
     <p><h2>Jeff Buckley was born in California’s Orange County in 1966 and died in a tragic drowning accident in Memphis on May 29, 1997.</h2> He had emerged in New York City’s avant-garde club scene in the 1990’s as one of the most remarkable musical artists of his generation, acclaimed by audiences, critics, and fellow musicians alike. His first commercial recording, the four-song EP Live At Sin-é, was released in December 1993 on Columbia Records. The EP captured Buckley, accompanying himself on electric guitar, in a tiny coffeehouse in New York’s East Village, the neighborhood he’d made his home.</p>
 
     <p>By the time of the EP’s release during the fall of 1993, Buckley had already entered the studio with Mick Grondahl (bass), Matt Johnson (drummer), and producer Andy Wallace and recorded seven original songs (including “Grace” and “Last Goodbye”) and three covers (among them Leonard Cohen’s “Hallelujah”, Benjamin Britten’s “Corpus Christi Carol”) that comprised his debut album Grace. Guitarist Michael Tighe became a permanent member of Jeff Buckley’s ensemble and went on to co-write and perform on Grace’s “So Real” just prior to the release of the album.</p>
@@ -75,9 +76,7 @@
 
     <p>In addition to Grace, 1998 saw the release of Jeff’s unfinished album from his Memphis days, Sketches (For My Sweetheart The Drunk). The 2000 release of Jeff Buckley – Mystery White Boy was joined by a release of a live DVD performance at Chicago’s Metro Theater. In 2003, Sony Legacy released Live at Sin-e Legacy Edition and 2004’s Grace Legacy Edition, both of which featured rare tracks and outtakes from live performances. In 2007, the album So Real: Songs From Jeff Buckley was released, featuring remastered tracks for hardcore fans and audiophiles. In 2009, we saw Jeff performing on his album tour in the Live DVD Grace – Around The World. In 2014, to mark the 20th anniversary of Grace, 2000 limited edition Lilac Swirl 180-gram vinyl albums were released. A new album of previously unheard material will be released in March 2015. We hope to see more highly-anticipated releases in the coming years.</p>
 
-  </div>
 <!-- FIN BIOGRAFIA -->
-
 <!-- DISCOGRAFIA -->
 <h1>Jeff Buckley Discografía</h1>
 <!-- FIN DISCOGRAFIA -->
@@ -89,6 +88,24 @@
 <!-- FOTOS -->
 <h1>Jeff Buckley Photos</h1>
 <!-- FIN FOTOS -->
+
+ </div>
+ <div class="box-5">
+   Footer
+ </div>
+</div>
+
+
+
+
+<body class="flex-container">
+<!-- SLIDER -->
+
+<!-- FIN SLIDER -->
+
+
+
+
 
   </body>
 </html>
