--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@
 <!-- FIN MENU -->
  </div>
  <div class="box-3">
- <div class="slider"></div>
    <!-- BIOGRAFIA -->
 <h1>Jeff Buckley Biography</h1>
-    <p><h2>Jeff Buckley was born in California’s Orange County in 1966 and died in a tragic drowning accident in Memphis on May 29, 1997.</h2> He had emerged in New York City’s avant-garde club scene in the 1990’s as one of the most remarkable musical artists of his generation, acclaimed by audiences, critics, and fellow musicians alike. His first commercial recording, the four-song EP Live At Sin-é, was released in December 1993 on Columbia Records. The EP captured Buckley, accompanying himself on electric guitar, in a tiny coffeehouse in New York’s East Village, the neighborhood he’d made his home.</p>
+    <p><h4>Jeff Buckley was born in California’s Orange County in 1966 and died in a tragic drowning accident in Memphis on May 29, 1997. He had emerged in New York City’s avant-garde club scene in the 1990’s as one of the most remarkable musical artists of his generation, acclaimed by audiences, critics, and fellow musicians alike. His first commercial recording, the four-song EP Live At Sin-é, was released in December 1993 on Columbia Records. The EP captured Buckley, accompanying himself on electric guitar, in a tiny coffeehouse in New York’s East Village, the neighborhood he’d made his home.</p></h4>
 
     <p>By the time of the EP’s release during the fall of 1993, Buckley had already entered the studio with Mick Grondahl (bass), Matt Johnson (drummer), and producer Andy Wallace and recorded seven original songs (including “Grace” and “Last Goodbye”) and three covers (among them Leonard Cohen’s “Hallelujah”, Benjamin Britten’s “Corpus Christi Carol”) that comprised his debut album Grace. Guitarist Michael Tighe became a permanent member of Jeff Buckley’s ensemble and went on to co-write and perform on Grace’s “So Real” just prior to the release of the album.</p>
 
@@ -79,10 +78,26 @@
 <!-- FIN BIOGRAFIA -->
 <!-- DISCOGRAFIA -->
 <h1>Jeff Buckley Discografía</h1>
+<div>1</div>
+<div>2</div>
+<div>3</div>
+<div>4</div>
+<div>5</div>
+<div>6</div>
+<div>7</div>
+<div>8</div>
+<div>9</div>
+<div>10</div>
 <!-- FIN DISCOGRAFIA -->
 
 <!-- VIDEOS -->
 <h1>Jeff Buckley Videos</h1>
+<div>
+<iframe width="45%" height="240" src="https://www.youtube.com/embed/XjO4IenAyUw?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> 
+<iframe width="45%" height="240" src="https://www.youtube.com/embed/EcaxrqhUJ4c?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</div>
+
+<div></div>
 <!-- FIN VIDEOS -->
 
 <!-- FOTOS -->
