--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
-		<meta name="author" content="Nini">
-		<meta name="keyword" content="Jeff Buckley">
-		<meta name="description" content="Sitio tributo a Jeff Buckley">
-		<title>Jeff Buckley's Site</title>
+		<meta name="author" content="Alina Saavedra">
+		<meta name="keyword" content="Sitio tributo a Jeff Buckley">
+		<meta name="description" content="Jeff Buckley, album grace, discografía, biografia">
+		<title>Jeff Buckley - Sitio web Tributo</title>
+
 		<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/base.css">
 	</head>
 
 	<body>
+<!--INICIO NAV-->
 		<nav class="navbar navbar-expand-lg main-navbar">
 			<div class="container-fluid">			
 			  <a class="navbar-brand" href="#">
@@ -33,7 +35,9 @@
 			  </div>
 		  </div>
 		</nav>
+<!--FIN NAV-->
 		
+		<!--INICIO HEADER Y BIO-->
 		<section class="hero bg-overlay" id="bio" data-bg="img/hero.png">
 			<div class="text">
 				<p class="lead"> "NO NECESITO SER RECORDADO, DESEO QUE LA MÚSICA SEA RECORDADA".</p>
@@ -41,12 +45,11 @@
 				<p>Jeffrey Scott "Jeff" Buckley (California, Estados Unidos, 17 de noviembre de 1966 - Tennessee, Estados Unidos, 29 de mayo de 1997) fue un cantautor estadounidense de folk rock, considerado una de las mejores voces de la música de todos los tiempos. Es reconocido por haber sido un intérprete muy virtuoso, por su potente rango vocal cuatro octavas y media; y por su primer y único álbum de estudio, titulado Grace en 1994; que es considerado una obra maestra de todos los tiempos, especialmente por su sensibilidad interpretativa única, siendo reconocido tanto por la crítica como por músicos como <em>Bob Dylan</em> y <em>Radiohead</em>, y la crítica lo consideró uno de los artistas más prometedores de su generación. Sin embargo, en la cima de su popularidad, muere ahogado mientras nadaba en el Río Wolf (Tennessee) a la altura de la ciudad de Memphis. Los críticos y los músicos aún reconocen su trabajo y estilo. Fue hijo del también cantautor Tim Buckley (1947–1975).</p>
 				<br>
 				<p>Mojo Pin - Album Grace 1996 </p><audio controls><source src="audio/mojo-pin.ogg" type="audio/ogg">Your browser does not support the audio element.</audio>
-
-				
-
 				</div>
 		</section>
+		<!--FIN HEADER Y BIO-->
 
+		<!--INICIO DISCOGRAFIA-->
 		<section class="padding bg-grey" id="discografia">
 			<div class="container">
 				<h2 class="section-title">Discografía de Jeff Buckley</h2>
@@ -214,28 +217,31 @@
 				</div>
 			</div>
 		</section>
+<!--FIN DISCOGRAFIA-->
 
+<!--INICIO MULTIMEDIA-->
 <section class="col-sm-12 padding bg-dark" id="multimedia">
 			<div class="container">
 				<h2 class="section-title-white">The last interview</h2> </br>
 				<div>
 		    <iframe width="100%" height="640" src="https://www.youtube.com/embed/Q3cU59iMK_M?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-		
 	</div>
 </div>
 </section>
+<!--FIN MULTIMEDIA-->
 
+<!--INICIO FOOTER-->
 		<footer>
 			<div class="container">
 				<figure>
 					<img src="img/logo-light.png" alt="Logo">
 				</figure>
-				<p>
-					Hecho con ♥︎ en Bootstrap
+				<p class="link">
+					<a href="https://www.facebook.com/JeffBuckley/">Facebook</a>/<a href="https://twitter.com/JeffBuckley">Twitter</a>
 				</p>
 			</div>
 		</footer>
-
+<!--FIN FOOTER-->
 		<script src="js/jquery.min.js"></script>
 		<script src="bootstrap/js/bootstrap.min.js"></script>
 		<script src="js/jquery.easeScroll.js"></script>
